# glassbox

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  start-claude
.beads/: config.yaml  issues.jsonl
agents/: __init__.py  _paths.py  agentmail.py  beads.py  bus.py  coordinator.py  ideator.py  improver.py  llm.py  planner.py  run.py  server.py  skill.py  validator.py  worker.py
agents/planner/: SKILL.baseline.md  SKILL.md
algotune/tests/: grade.py
apps/web/: .gitignore  README.md  next.config.ts  package.json
contract/: CAPABILITIES.md  events.py  glassbox.contract.json  index.ts  package.json
docs/: DEMO.md  RESUME.md  SUBMISSION.md  VIDEO_SCRIPT.md
docs/prds/: GLASSBOX_PRD.md
docs/runs/: README.md  textkit-climb.json  tokenizer-climb.json  tokenizer-perf.md
harness/: __init__.py  eval.py  evaluator.py  gen_fixtures.py  oracle.py  weave_eval.py
harness/data/: corpus.txt  curve.tokenizer.json  fixtures.jsonl  meta.json
patches/: @copilotkit__runtime.patch
perf-takehome/: perf_takehome.py
scripts/: agent_mail.sh  backend.sh  bench_tok.py  capture_climb.py  redis.sh  seed_curve.py  smoke.py
speedkit/: kernels.py
speedkit/tests/: grade.py
tasks/: __init__.py  base.py
tasks/algotune/: __init__.py
tasks/byo/: __init__.py
tasks/kata/: __init__.py
tasks/perf_takehome/: __init__.py
tasks/speedkit/: __init__.py
tests/: test_byo_author.py  test_one_task_per_worker.py  test_stale_beads.py  test_validation_pass_bar.py
tokenizer-rs/: Cargo.toml  build.rs  check_accuracy.py
tokenizer-rs/src/: lib.rs  main.rs  pretok.rs
(+169 files in other folders)
