[project]
name = "glassbox-agents"
version = "0.0.0"
description = "Glassbox swarm: planner, coordinator, workers, validator, improver."
requires-python = ">=3.12,<3.13"
dependencies = [
    "weave",
    "wandb",
    "tiktoken",
    "redis",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "python-dotenv",
    "httpx",
    "pydantic",
    "rich",
    "fastmcp>=3,<4",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
# Collect only the swarm's own tests. Without this, pytest would walk into .venv
# and the task workspaces (tasks/*/workspace/tests) and try to run their tests.
testpaths = ["tests"]
# Put the repo root on sys.path so `import agents` / `import contract` resolve.
pythonpath = ["."]
addopts = "-q"
